--- a/Maquetacion_Basica/reto4-3.html
+++ b/Maquetacion_Basica/reto4-3.html
@@ -32,7 +32,7 @@
       <br>
       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa eligendi amet inventore, placeat sapiente cum necessitatibus possimus, dolor numquam, sed est officiis tenetur aperiam? Tempora dolore laboriosam repudiandae adipisci quam.</p>
       <br>
-      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa eligendi amet inventore, placeat sapiente cum necessitatibus possimus, dolor numquam, sed est officiis tenetur aperiam? Tempora dolore laboriosam repudiandae adipisci quam.</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione quibusdam animi natus doloremque est error, dolorem possimus vitae corporis molestiae provident mollitia voluptas repellendus repudiandae pariatur aspernatur modi labore temporibus</p>
     </div>
   </section>
 
