--- a/tema 2/reto 1/agenciaViajes.html
+++ b/tema 2/reto 1/agenciaViajes.html
@@ -37,38 +37,30 @@
         <img src="imagenes/brazil.jpg" alt="mallorca">
         <h3>Mallorca</h3>
         <p>El destino magico de las Baleares</p>
-        <button>Ver más</button>
+        <button onclick="desplegarInformacion('Mallorca')">Ver más</button>
       </li>
       <li>
         <img src="imagenes/hawaii.jpg" alt="Galicia">
         <h3>Galicia</h3>
         <p>Galifornia a tus manos</p>
-        <button>Ver más</button>
+        <button onclick="desplegarInformacion('Galicia')" >Ver más</button>
       </li>
       <li>
         <img src="imagenes/panama.jpg" alt="Cadiz">
         <h3>Cadiz</h3>
         <p>El parariso</p>
-        <button>Ver más</button>
+        <button onclick="desplegarInformacion('Cadiz')">Ver más</button>
       </li>
       <li>
         <img src="imagenes/jamaica.jpg" alt="Canarias">
         <h3>Canarias</h3>
         <p>Las islas que enamoran</p>
-        <button>Ver más</button>
+        <button onclick="desplegarInformacion('Canarias')">Ver más</button>
       </li>
     </ul>
   </section>
 
-<!--   <section id="detallesDestinos">
-    <h2>Galicia</h2>
-    <ul>
-      <li><img src="imagenes/blue-mountain.jpg" alt=""></li>
-      <li><img src="imagenes/bocas-del-toro.jpg" alt=""></li>
-      <li><img src="imagenes/iguacu-falls.jpg" alt=""></li>
-      <li><img src="imagenes/kilauea-volcano.jpg" alt=""></li>
-    </ul>
-  </section> -->
+  <section class="desplegable" ></section>
 
   <section id="reservas">
     <h2>Reservas</h2>
@@ -85,11 +77,12 @@
       <input type="date" id="fecha">
       <label for="telefono">Teléfono:</label>
       <input type="tel" id="telefono">
-      <button>Informacion</button>
-      <button>Filtrado</button>
+      <button id="informacion" onclick="agregarPersona()">Informacion</button>
+      <button onclick="filtrar()">Filtrado</button>
     </form>
   </section>
+  <div id="reservasHechas"></div>
 </main>
-  
+<script src="agenciaViajes.js"></script>
 </body>
 </html>
